// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`getOrders > infiniteQueryOptions > default 1`] = `
{
  "pageParams": [
    undefined,
    "0x23",
  ],
  "pages": [
    {
      "nextCursor": "0x23",
      "orders": [
        {
          "amount": 230000000000000000000n,
          "baseToken": "0x20c0000000000000000000000000000000000005",
          "flipTick": 0,
          "isBid": true,
          "isFlip": false,
          "maker": "0xf39fd6e51aad88f6f4ce6ab8827279cfffb92266",
          "next": 39n,
          "orderId": 19n,
          "prev": 0n,
          "quoteToken": "0x20c0000000000000000000000000000000000004",
          "remaining": 230000000000000000000n,
          "tick": 800,
        },
        {
          "amount": 430000000000000000000n,
          "baseToken": "0x20c0000000000000000000000000000000000005",
          "flipTick": 0,
          "isBid": true,
          "isFlip": false,
          "maker": "0xf39fd6e51aad88f6f4ce6ab8827279cfffb92266",
          "next": 0n,
          "orderId": 39n,
          "prev": 19n,
          "quoteToken": "0x20c0000000000000000000000000000000000004",
          "remaining": 430000000000000000000n,
          "tick": 800,
        },
        {
          "amount": 210000000000000000000n,
          "baseToken": "0x20c0000000000000000000000000000000000005",
          "flipTick": 0,
          "isBid": true,
          "isFlip": false,
          "maker": "0xf39fd6e51aad88f6f4ce6ab8827279cfffb92266",
          "next": 37n,
          "orderId": 17n,
          "prev": 0n,
          "quoteToken": "0x20c0000000000000000000000000000000000004",
          "remaining": 210000000000000000000n,
          "tick": 600,
        },
        {
          "amount": 410000000000000000000n,
          "baseToken": "0x20c0000000000000000000000000000000000005",
          "flipTick": 0,
          "isBid": true,
          "isFlip": false,
          "maker": "0xf39fd6e51aad88f6f4ce6ab8827279cfffb92266",
          "next": 0n,
          "orderId": 37n,
          "prev": 17n,
          "quoteToken": "0x20c0000000000000000000000000000000000004",
          "remaining": 410000000000000000000n,
          "tick": 600,
        },
        {
          "amount": 190000000000000000000n,
          "baseToken": "0x20c0000000000000000000000000000000000005",
          "flipTick": 0,
          "isBid": true,
          "isFlip": false,
          "maker": "0xf39fd6e51aad88f6f4ce6ab8827279cfffb92266",
          "next": 35n,
          "orderId": 15n,
          "prev": 0n,
          "quoteToken": "0x20c0000000000000000000000000000000000004",
          "remaining": 190000000000000000000n,
          "tick": 400,
        },
      ],
    },
    {
      "nextCursor": "0x23",
      "orders": [
        {
          "amount": 230000000000000000000n,
          "baseToken": "0x20c0000000000000000000000000000000000005",
          "flipTick": 0,
          "isBid": true,
          "isFlip": false,
          "maker": "0xf39fd6e51aad88f6f4ce6ab8827279cfffb92266",
          "next": 39n,
          "orderId": 19n,
          "prev": 0n,
          "quoteToken": "0x20c0000000000000000000000000000000000004",
          "remaining": 230000000000000000000n,
          "tick": 800,
        },
        {
          "amount": 430000000000000000000n,
          "baseToken": "0x20c0000000000000000000000000000000000005",
          "flipTick": 0,
          "isBid": true,
          "isFlip": false,
          "maker": "0xf39fd6e51aad88f6f4ce6ab8827279cfffb92266",
          "next": 0n,
          "orderId": 39n,
          "prev": 19n,
          "quoteToken": "0x20c0000000000000000000000000000000000004",
          "remaining": 430000000000000000000n,
          "tick": 800,
        },
        {
          "amount": 210000000000000000000n,
          "baseToken": "0x20c0000000000000000000000000000000000005",
          "flipTick": 0,
          "isBid": true,
          "isFlip": false,
          "maker": "0xf39fd6e51aad88f6f4ce6ab8827279cfffb92266",
          "next": 37n,
          "orderId": 17n,
          "prev": 0n,
          "quoteToken": "0x20c0000000000000000000000000000000000004",
          "remaining": 210000000000000000000n,
          "tick": 600,
        },
        {
          "amount": 410000000000000000000n,
          "baseToken": "0x20c0000000000000000000000000000000000005",
          "flipTick": 0,
          "isBid": true,
          "isFlip": false,
          "maker": "0xf39fd6e51aad88f6f4ce6ab8827279cfffb92266",
          "next": 0n,
          "orderId": 37n,
          "prev": 17n,
          "quoteToken": "0x20c0000000000000000000000000000000000004",
          "remaining": 410000000000000000000n,
          "tick": 600,
        },
        {
          "amount": 190000000000000000000n,
          "baseToken": "0x20c0000000000000000000000000000000000005",
          "flipTick": 0,
          "isBid": true,
          "isFlip": false,
          "maker": "0xf39fd6e51aad88f6f4ce6ab8827279cfffb92266",
          "next": 35n,
          "orderId": 15n,
          "prev": 0n,
          "quoteToken": "0x20c0000000000000000000000000000000000004",
          "remaining": 190000000000000000000n,
          "tick": 400,
        },
      ],
    },
  ],
}
`;

exports[`getOrders > queryOptions > default 1`] = `
{
  "pageParams": [
    undefined,
  ],
  "pages": [
    {
      "nextCursor": "0x23",
      "orders": [
        {
          "amount": 230000000000000000000n,
          "baseToken": "0x20c0000000000000000000000000000000000005",
          "flipTick": 0,
          "isBid": true,
          "isFlip": false,
          "maker": "0xf39fd6e51aad88f6f4ce6ab8827279cfffb92266",
          "next": 39n,
          "orderId": 19n,
          "prev": 0n,
          "quoteToken": "0x20c0000000000000000000000000000000000004",
          "remaining": 230000000000000000000n,
          "tick": 800,
        },
        {
          "amount": 430000000000000000000n,
          "baseToken": "0x20c0000000000000000000000000000000000005",
          "flipTick": 0,
          "isBid": true,
          "isFlip": false,
          "maker": "0xf39fd6e51aad88f6f4ce6ab8827279cfffb92266",
          "next": 0n,
          "orderId": 39n,
          "prev": 19n,
          "quoteToken": "0x20c0000000000000000000000000000000000004",
          "remaining": 430000000000000000000n,
          "tick": 800,
        },
        {
          "amount": 210000000000000000000n,
          "baseToken": "0x20c0000000000000000000000000000000000005",
          "flipTick": 0,
          "isBid": true,
          "isFlip": false,
          "maker": "0xf39fd6e51aad88f6f4ce6ab8827279cfffb92266",
          "next": 37n,
          "orderId": 17n,
          "prev": 0n,
          "quoteToken": "0x20c0000000000000000000000000000000000004",
          "remaining": 210000000000000000000n,
          "tick": 600,
        },
        {
          "amount": 410000000000000000000n,
          "baseToken": "0x20c0000000000000000000000000000000000005",
          "flipTick": 0,
          "isBid": true,
          "isFlip": false,
          "maker": "0xf39fd6e51aad88f6f4ce6ab8827279cfffb92266",
          "next": 0n,
          "orderId": 37n,
          "prev": 17n,
          "quoteToken": "0x20c0000000000000000000000000000000000004",
          "remaining": 410000000000000000000n,
          "tick": 600,
        },
        {
          "amount": 190000000000000000000n,
          "baseToken": "0x20c0000000000000000000000000000000000005",
          "flipTick": 0,
          "isBid": true,
          "isFlip": false,
          "maker": "0xf39fd6e51aad88f6f4ce6ab8827279cfffb92266",
          "next": 35n,
          "orderId": 15n,
          "prev": 0n,
          "quoteToken": "0x20c0000000000000000000000000000000000004",
          "remaining": 190000000000000000000n,
          "tick": 400,
        },
      ],
    },
  ],
}
`;
